# grace-iberlef-2026

./: .coverage  .coverage-thresholds.json  .env.example  .gitignore  .install-state  .pre-commit-config.yaml  README.md  pyproject.toml
FINAL/: download_report.py  download_vol.py  ensemble_results.json  grace-sweep-report.md  grace-sweep-summary.csv  modal_ensemble.py  modal_results_summary.json  modal_sweep.py  notebook94c050a41f.ipynb
FINAL/kaggle_runs/: gen_kernels.py  live_monitor.sh  manifest.json  orchestrate.py  poll_wave.sh  push_job.sh
FINAL/modal_out/: beto_galen_seed100_dev_logits.npy  beto_galen_seed100_dev_predictions.json  beto_galen_seed100_epoch10_blind_logits.npy  beto_galen_seed100_metrics.csv  beto_galen_seed100_metrics.json  beto_galen_seed2026_dev_logits.npy  beto_galen_seed2026_dev_predictions.json  (+128 more)
docs/: kaggle_mcp_upstream_issue_draft.md
experiments/: budget.yaml
grace/: __init__.py
scripts/: PROBE-RESULTS.md  audit_data.py  bionlp.sh  convert_abstrct_es.py  gen_variant_configs.py  generate_synthetic.py  kaggle_train.py  run_backbone_sweep.sh  run_full_sweep.sh  submit.py  train_track1.py  train_track1_hf.py  train_track2.py  verify_rules.py
tests/: test_augment.py  test_component_tagger_smoke.py  test_loaders_track1.py  test_loaders_track2.py  test_nli_relation_classifier_smoke.py  test_offsets.py  test_offsets_hf.py  test_premise_extractor.py  test_relation_classifier_smoke.py  test_save_roundtrip.py  test_schema.py  test_scorer_self_consistency.py  test_scorer_wrapper.py  test_sentence_clf_smoke.py  test_smoke.py  test_submit.py  test_tokenizer.py  test_tokenizer_parity.py  test_tracker.py
(+136 files in other folders)
