[project]
name = "grace-iberlef-2026"
version = "0.1.0"
description = "System for GRACE @ IberLEF 2026 shared task (Spanish clinical argument mining)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Prekzursil" },
]
dependencies = [
  "transformers>=4.45",
  "torch>=2.3",
  "datasets>=2.20",
  "accelerate>=0.33",
  "peft>=0.12",
  "scikit-learn>=1.5",
  "pandas>=2.2",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "anthropic>=0.35",
  "openai>=1.40",
  "tenacity>=8.5",
  "rich>=13.7",
  "huggingface-hub>=0.25",
  "Levenshtein>=0.25",
  "pytorch-crf>=0.7.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "black>=24.8",
  "ruff>=0.6",
  "mypy>=1.11",
  "jupyter>=1.0",
  "pre-commit>=3.8",
  "types-PyYAML",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["grace*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "C4", "SIM", "TCH", "RUF"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grace.io.*"
strict = true

[[tool.mypy.overrides]]
module = "grace.eval.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=grace --cov-report=term-missing"
pythonpath = ["."]
